# mtsg

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
dnanexus/mtsg/: README.developer.md  README.md  dxapp.json
dnanexus/mtsg/src/: mtsg.sh
dnanexus/mtsg/test/: run
dnanexus/mtsg/test/fixtures/vcfs/: sample.multi.vcf  sample.single.vcf
dnanexus/mutspec/: README.developer.md  README.md  dxapp.json
dnanexus/mutspec/src/: mutspec.sh
dnanexus/mutspec/test/: run
dnanexus/mutspec/test/fixtures/: sample-sheet.txt
mtsg/: __init__.py  genome_build.py  main.py  sample_name.py
mtsg/commands/: __init__.py  init.py  run.py  visualize.py
mtsg/templates/: plot.js  signatures.html.j2
r/: mutational_patterns.R
references/: reference.none.tsv  reference.sj.clinical-pilot-g4k-pcgp.20201016.tsv
scripts/: generate_inputs.py  prepare_reference.py  reshape_signatures.py
src/: commands.rs  cosmic.rs  default.html.hbs  lib.rs  main.rs  mutational_patterns.R  r.rs  sample_sheet.rs  signatures.html.hbs  sjid.rs  vcf.rs  visualizations.rs
src/commands/: download_signatures.rs  generate_sample_sheet.rs  run.rs  split_vcf.rs  visualize.rs
src/r/: mutational_patterns.R
src/sjid/: type.rs  v1.rs  v2.rs
src/vcf/: mod.rs  reader.rs
stubs/SigProfilerMatrixGenerator/: install.pyi
stubs/sigproSS/: spss.pyi
test/fixtures/: probabilities.missing-mutation-types.txt  probabilities.missing-signatures.txt  probabilities.txt  sample.invalid.vcf  sample.single.g.vcf  sample.single.vcf  signatures.bad-contribution.txt  signatures.no-tissue-column.txt  signatures.txt
tests/: test_genome_build.py  test_mtsg.py  test_sample_name.py
tests/commands/: test_visualize.py
