[package]
name = "mutspec"
version = "1.0.0"
authors = ["Michael Macias <michael.macias@stjude.org>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
csv = "1.0.0"
env_logger = "0.6.0"
flate2 = "1.0.2"
glob = "0.2.11"
handlebars = "1.0.0"
lazy_static = "1.0.2"
log = "0.4.3"
regex = "1.0.2"
reqwest = "0.9.5"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
