[package]
name = "mtsg"
version = "2.3.0"
authors = ["Michael Macias <michael.macias@stjude.org>"]
edition = "2018"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.32"
clap = "2.32.0"
csv = "1.0.0"
env_logger = "0.7.0"
flate2 = "1.0.2"
git-testament = "0.1.6"
glob = "0.3.0"
handlebars = "3.0.1"
log = "0.4.3"
once_cell = "1.0.2"
regex = "1.0.2"
reqwest = { version = "0.10.0", features = ["blocking"] }
serde = { version = "1.0.70", features = ["derive"] }
serde_json = "1.0.24"
