[tool.poetry]
name = "mtsg"
version = "3.0.1"
description = "Find and quantify COSMIC mutational signatures across samples"
authors = ["Michael Macias <michael.macias@stjude.org>"]

[tool.poetry.scripts]
mtsg = "mtsg.main:main"

[tool.poetry.dependencies]
Jinja2 = "^2.11.2"
python = "^3.8"
sigproSS = "^0.0.0"

[tool.poetry.dev-dependencies]
black = "21.5b0"
mypy = "^0.812"
pylint = "^2.6.0"
pytest = "^6.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
